# tressette

./: .cdtproject  .gitignore  .project  Makefile.in  ReadMe.txt  authors  configure  configure.in  tressettetux.prj  zzz_opensuse_install_1.sh  zzz_opensuse_install_2.sh  zzz_opensuse_run.sh
doc/: Implementazione.txt  Install.txt  PubblicareVersione.txt  design.txt  statistic_download.txt
doc/bugs/: errore_animaz_line_id4.txt  errore_durantela_giocata.txt  errore_durantela_giocata_id2.txt  errore_nel_sort_id3.txt
doc/manual/: Readme.txt  toc.hhc  tre.hhp  tresset.html
include/: BFont.h  SDL_active.h  SDL_audio.h  SDL_byteorder.h  SDL_cdrom.h  SDL_copying.h  SDL_joystick.h  SDL_keyboard.h  SDL_keysym.h  SDL_main.h  SDL_mutex.h  SDL_quit.h  SDL_syswm.h  begin_code.h  win_type_global.h
include/SDLshipped/: SDL_endian.h  SDL_error.h  SDL_events.h  SDL_image.h  SDL_loadso.h  SDL_mixer.h  SDL_mouse.h  SDL_net.h  SDL_opengl.h  SDL_rwops.h  SDL_thread.h  SDL_timer.h  SDL_ttf.h  SDL_types.h  SDL_version.h  SDL_video.h  sdl.h
lib/: SDL_mixer.lib  SDL_net.lib
lib/SDLshipped/: SDL_image.lib
setupwin32/: Copy of out_file_list.txt  ReadmeCreateZips.txt  list_of_files.rb  out_file_list.txt  pack_filelist_in_zip.rb  src_file_list.txt
src/: Makefile.am  Makefile.in
src/GfxWidtget2/: GfxWidtget2.vcproj  ReadMe.txt  Stdafx.cpp  Stdafx.h
src/GfxWidtget3/: GfxWidtget3.vcproj  ReadMe.txt  cImageLinkGfx.cpp  cImageLinkGfx.h  stdafx.cpp  stdafx.h
src/MySearchAlpha/: ConstSearchAlpha.h  MySearchAlpha.cpp  MySearchAlpha.dsp  MySearchAlpha.dsw  ReadMe.txt  StdAfx.cpp  StdAfx.h  TrickHistory.cpp  TrickHistory.h  cAlgABSolver.cpp  cAlgABSolver.h  cCardItem.cpp  cCardItem.h  cHand.cpp  cHand.h  cSettings.cpp  cSettings.h  cStateAB.cpp  cStateAB.h  regkey.cpp  regkey.h  todo.txt
src/NetCommon/: I_BinderMsg.h  Log.cpp  Log.h  MsgQueueServer.cpp  MsgQueueServer.h  Socket.cpp  Socket.h  cConnClient.cpp  cConnClient.h  cListenData.cpp  cListenData.h  cListenDataClient.cpp  cListenDataClient.h  cMsgBase.cpp  cMsgBase.h  cMsgCMD.cpp  cMsgCMD.h  cMsgConnectServer.cpp  cMsgConnectServer.h  cMsgSrv_Msg.cpp  cMsgSrv_Msg.h  cNetClient.cpp  cNetClient.h  cNetPlayer.cpp  cNetPlayer.h  cPoolMsg.cpp  cPoolMsg.h  cProtocolNet.cpp  cProtocolNet.h  cTransaction.cpp  cTransaction.h  tracestl.h
src/TestStuff/: MyReadMe.txt  cxxtestgen.py
src/TreClientVs6/: EngineApp.cpp  EngineApp.h  EnterNameGfx.cpp  EnterNameGfx.h  Makefile.am  Makefile.in  OptionDeckGfx.cpp  OptionDeckGfx.h  OptionGameGfx.cpp  OptionGameGfx.h  OptionGfx.cpp  OptionGfx.h  Readme.txt  StdAfx.cpp  StdAfx.h  ToDo.txt  TreClientVs6.dsp  TreClientVs6.dsw  TreClientVs6.sln  TreClientVs6.vcproj  cCardGfx.cpp  cCardGfx.h  cDelayNextAction.cpp  cDelayNextAction.h  cGameMainGfx.cpp  cGameMainGfx.h  cHightScoreMgr.cpp  cHightScoreMgr.h  cMenuMgr.cpp  cMenuMgr.h  cMusicManager.cpp  cMusicManager.h  cSettings.cpp  cSettings.h  cTipoDiMazzo.cpp  cTipoDiMazzo.h  credits.cpp  credits.h  fading.cpp  fading.h  (+7 more)
src/TreClientVs6/Scripts/: test1.py
src/TreClientVs6/Tressette_Installer/: Tressette_Installer.vdproj  firma_installer.bat
src/TreClientVs6/language_gen/: lang_det.xml  lang_gen.prj  languages_cpp.xsl  languages_h.xsl
src/TreClientVs6/settings_gen/: Readme.txt  gensettings.rb  libini_settings_cpp.xsl  registry_settings_cpp.xsl  settings.xml  settings_expat_cpp.rtemp  settings_expat_h.rtemp  settings_libini_cpp.rtemp  settings_libini_h.rtemp  settings_reg_cpp.rtemp  settings_reg_h.rtemp  winapi_settings_cpp.xsl  winapi_settings_h.xsl
src/TreCore/: AlgCompareFunct.h  AlgPlayerInterface.h  AlgSupport.cpp  AlgSupport.h  CardSpec.cpp  CardSpec.h  CoreEnv.h  ErrorMsg.h  InfoComm.h  PythonExport.cpp  PythonExport.h  TraceService.cpp  TraceService.h  cAlgDefault.cpp  cAlgDefault.h  cAlgNetClientPlayer.cpp  cAlgNetClientPlayer.h  cAlgPlugin.cpp  cAlgPlugin.h  cAlgPythonPlayer.cpp  cAlgPythonPlayer.h  cCoreEngine.cpp  cCoreEngine.h  cGiocata.cpp  cGiocata.h  cMano.cpp  cMano.h  cMatchPoints.cpp  cMatchPoints.h  cMazzo.cpp  cMazzo.h  cPartita.cpp  cPartita.h  cPlayer.cpp  cPlayer.h  cPlayerStatistic.cpp  cPlayerStatistic.h  cPlayersOnTable.cpp  (+5 more)
(+54 files in other folders)
